# othello-gpt

./: .gitignore  README.md  nb_loc.py  pyproject.toml
data/probes/: linear_probe_20250131_121102.pt  linear_probe_20250208_092403.pt
src/othello_gpt/: main.py  othello.py  util.py
src/othello_gpt/data/: generate.py  vis.py
src/othello_gpt/model/: nanoGPT.py  neurons.py  probe.ipynb  train.ipynb
